Fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -353,7 +353,7 @@ ol.default li{
 	color: #fff;
 	}
 	
-#nav{height: 100%;}
+#nav{height: 100%; 	z-index: 19998;}
 
 /*#nav ul{}
 #nav ul li{}*/
@@ -693,7 +693,7 @@ img.deatial_image {
 #preloader { 
 	position: fixed; 
 	left: 0; top: 0; 
-	z-index: 999; 
+	z-index: 20004; 
 	width: 100%; 
 	height: 100%; 
 	overflow: visible; 
